--- a/pms/views/assets.xml
+++ b/pms/views/assets.xml
@@ -2,11 +2,13 @@
 <odoo>
 
 <template id="assets_frontend" inherit_id="portal.assets_frontend">
-    <xpath expr="//script[last()]" position="after">
+    <xpath expr="." position="inside">
         <script
                 type="text/javascript"
                 src="/pms/static/src/js/send_invitation_data.js"
             />
+        <script type="text/javascript" src="/pms/static/src/js/folio_portal_sidebar.js">
+        </script>
     </xpath>
 </template>
 
