--- a/pms/views/product_template_views.xml
+++ b/pms/views/product_template_views.xml
@@ -5,15 +5,22 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view" />
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='company_id']" position="after">
+                <field name="is_pms_available" />
+                <field
+                    name="pms_property_ids"
+                    widget="many2many_tags"
+                    options="{'no_create': True,'no_open': True}"
+                    attrs="{'invisible': [('is_pms_available', '=', False)]}"
+                />
+            </xpath>
             <xpath expr="//page[@name='sales']" position="before">
-                <page string="Service">
+                <page
+                    string="PMS Service"
+                    attrs="{'invisible': [('is_pms_available', '=', False)]}"
+                >
                     <group colspan="4">
                         <group>
-                            <field
-                                name="pms_property_ids"
-                                widget="many2many_tags"
-                                options="{'no_create': True,'no_open': True}"
-                            />
                             <field name="is_extra_bed" />
                             <field name="is_crib" />
                             <field name="daily_limit" />
